# mediawiki-k8s-operator

./: .gitignore  .licenserc.yaml  .lycheeignore  .trivyignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile.docs  README.md  charmcraft.yaml  pyproject.toml  renovate.json  tox.toml
.github/: .jira_sync_config.yaml  pull_request_template.md
.github/workflows/: cla-check.yml  close_stale.yaml  docs.yaml  docs_rtd.yaml  integration_test.yaml  promote_charm.yaml  publish_charm.yaml  release_notes_automation.yaml  test.yaml  test_terraform_files.yaml  test_terraform_module.yaml
20/: index.html
20/export/: influxDbData.txt
20/history/: history-trend.json
20/widgets/: duration-trend.json  executors.json  retry-trend.json
23/: index.html
23/export/: influxDbData.txt
23/history/: categories-trend.json  retry-trend.json
23/widgets/: executors.json  history-trend.json
27/: index.html
27/export/: influxDbData.txt
27/history/: history-trend.json  retry-trend.json
27/widgets/: categories-trend.json  executors.json
docs/: .custom_wordlist.txt  changelog.md  changelog.rst  conf.py  index.md  index.rst  redirects.txt  requirements.txt
docs/_static/: mermaid-sequence.css
docs/explanation/: charm-architecture.md  charm-design.rst  index.md  index.rst  security.md  security.rst
docs/how-to/: back-up-restore.md  back-up-restore.rst  configure-mediawiki.rst  contribute.md  contribute.rst  index.md  index.rst  install-extensions-and-skins.rst  integrate-with-cos.md  integrate-with-cos.rst  redeploy.rst  terraform.rst  troubleshoot.rst  upgrade.md  upgrade.rst
docs/reference/: actions.md  actions.rst  allowlist.rst  charm-architecture.rst  charm-deployment-architecture.md  charm-managed-settings.rst  configurations.md  configurations.rst  cryptographic-overview.rst  high-level-deployment.rst  included-extensions-and-skins.rst  index.md  index.rst  integrations.md  juju-events.rst  metrics.md  metrics.rst  relation-endpoints.rst  terraform.rst
docs/release-notes/: index.rst  landing-page.md
docs/release-notes/artifacts/: initial-charm.yaml  pr0005.yaml  pr0010.yaml  pr0034.yaml  pr0036.yaml  pr0038.yaml  pr0040.yaml  pr0041.yaml  pr0042.yaml  pr0043.yaml  pr0050.yaml  pr0052.yaml  pr0059.yaml  pr0060.yaml  pr0061.yaml  pr0063.yaml  pr0064.yaml  pr0065.yaml  pr0066.yaml  pr0067.yaml  pr0068.yaml  pr0069.yaml  pr0071.yaml  pr0072.yaml  prepare-read-the-docs.yaml  update-issue-templates.yaml
docs/reuse/: links.txt
docs/tutorial/: advanced-deployment.rst  basic-deployment.rst  index.rst
mediawiki_rock/: rockcraft.yaml
src/: charm.py  database.py  exceptions.py  git_sync.py  mediawiki.py  mediawiki_api.py  oauth.py  redis.py  state.py  types_.py  utils.py
src/templates/: LateSettings.php.template  LocalSettings.php.template
terraform/: .tflint.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/tests/: main.tf  main.tftest.hcl
tests/: conftest.py
tests/integration/: conftest.py  test_charm.py  test_git_sync.py  test_oauth.py  types_.py  utils.py
tests/unit/: conftest.py  test_base.py  test_charm.py  test_database.py  test_git_sync.py  test_mediawiki.py  test_mediawiki_api.py  test_redis.py  test_state.py  test_utils.py
(+15 files in other folders)
